--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,50 +1,14 @@
----
-layout: table_wrappers
----
-
 <!DOCTYPE html>
-
-<html lang="{{ site.lang | default: 'en-US' }}">
+<html lang="{{ site.lang | default: 'es-AR' }}">
 {% include head.html %}
 <body>
-  <a class="skip-to-main" href="#main-content">Skip to main content</a>
-  {% include icons/icons.html %}
-  {% include components/sidebar.html %}
-  <div class="main" id="top">
-    {% include components/header.html %}
-    <div class="main-content-wrap">
-      {% include components/breadcrumbs.html %}
-      <div id="main-content" class="main-content">
-        <main>
-          {% if site.heading_anchors != false %}
-            {% if page.page_toc != false %}
-              {%- capture source -%}
-              {% include vendor/anchor_headings.html html=content %}
-              {%- endcapture -%}
-              <nav id="toc" class="fs-2">
-                <h4>In this page</h4>
-                {% include toc.html html=source h_min=2 %}
-              </nav>
-            {% endif %}
-            {% include vendor/anchor_headings.html html=content beforeHeading="true" anchorBody="<svg viewBox=\"0 0 16 16\" aria-hidden=\"true\"><use xlink:href=\"#svg-link\"></use></svg>" anchorClass="anchor-heading" anchorAttrs="aria-labelledby=\"%html_id%\"" %}
-          {% else %}
+    {% include header.html %}
+    <div class="container">
+        <div class="text-center mt-5">
             {{ content }}
-          {% endif %}
-
-          {% if page.has_children == true and page.has_toc != false %}
-            {% include components/children_nav.html %}
-          {% endif %}
-        </main>
-        {% include components/footer.html %}
-      </div>
+        </div>
     </div>
-    {% if site.search_enabled != false %}
-      {% include components/search_footer.html %}
-    {% endif %}
-  </div>
-
-  {% if site.mermaid %}
-    {% include components/mermaid.html %}
-  {% endif %}
+    {% include scripts.html %}
+    {% include footer.html %}
 </body>
 </html>
