--- a/docs/assets/css/site.css
+++ b/docs/assets/css/site.css
@@ -1,4 +1,10 @@
-/* Copy styles from GH, i.e. https://docs.github.com/en/rest/overview/about-githubs-apis?apiVersion=2022-11-28 */
+:root {
+    --brand: #FFD300;
+}
+
+.text-brand {
+    color: var(--brand);
+}
 
 #toc {
     position: sticky;
@@ -24,4 +30,31 @@
 
 .cloud {
     width: 100%;
+}
+
+.navbar-nav .nav-link.active {
+    color: var(--brand);
+}
+
+.navbar-nav .nav-link.hover {
+    color: var(--brand);
+}
+
+.navbar-brand {
+    color: var(--brand);
+}
+
+.footer {
+    color: var(--brand);
+}
+
+svg {
+    fill: white !important;
+    width: 24px !important;
+    height: 24px !important;
+    background-color: transparent !important;
+}
+
+svg:hover {
+    fill: var(--brand);
 }
