--- a/docs/assets/css/site.css
+++ b/docs/assets/css/site.css
@@ -48,13 +48,9 @@
     color: var(--brand);
 }
 
-svg {
+.navbar svg {
     fill: white !important;
     width: 24px !important;
     height: 24px !important;
     background-color: transparent !important;
-}
-
-svg:hover {
-    fill: var(--brand);
 }
