--- a/docs/_layouts/data.html
+++ b/docs/_layouts/data.html
@@ -23,7 +23,42 @@
             {{ content }}
         </div>
     </div>
+    <div class="modal fade" id="details">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">
+                        Detalles
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>        
+                <div class="modal-body" id="details-body">
+                    <div class="spinner-border text-warning" role="status">
+                        <span class="visually-hidden">Cargando...</span>
+                    </div>
+                </div>
+            </div>
+        </div>        
+    </div>
+    {% raw %}
+    <script id="details-template" type="text/x-handlebars-template">
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th scope="row">Título</th>
+                    <td>{{title}}</td>
+                </tr>
+                <tr>
+                    <th scope="row">Handle</th>
+                    <td>{{handle}}</td>
+                </tr>
+                <tr>
+                </tr>
+            </tbody>
+        </table>
+    </script>
+    {% endraw %}
     {% include scripts.html %}
     {% include footer.html %}
-</body>
+  </body>
 </html>
