Mostrar indicador de carga mientras se refrescan los word clouds

--- a/docs/_layouts/data.html
+++ b/docs/_layouts/data.html
@@ -5,15 +5,12 @@
     {% include header.html %}
     <div class="container">
         <div class="text-center mt-5">
+            <div id="loading" class="spinner-border text-warning" role="status">
+                <span class="visually-hidden">Cargando...</span>
+            </div>
             <div id="years" style="height: 150px;">
-                <div class="spinner-border text-warning" role="status">
-                    <span class="visually-hidden">Cargando...</span>
-                </div>
             </div>
             <div id="tags" style="height: 300px;">
-                <div class="spinner-border text-warning" role="status">
-                    <span class="visually-hidden">Cargando...</span>
-                </div>
             </div>
             <div id="main" style="width: 100%; height: 800px;">
                 <div class="spinner-border text-warning" role="status">
