Ocultar guardado de busquedas
No soportamos esa funcionalidad, achica espacio en mobile

--- a/docs/assets/css/site.css
+++ b/docs/assets/css/site.css
@@ -54,3 +54,7 @@
     height: 24px !important;
     background-color: transparent !important;
 }
+
+.w2ui-btn.grid-search-btn[data-click=searchSave] {
+    display: none;
+}
