--- a/docs/_layouts/data.html
+++ b/docs/_layouts/data.html
@@ -5,7 +5,7 @@
     {% include header.html %}
     <div class="container">
         <div class="text-center mt-5">
-            <div id="loading" class="spinner-border text-warning" role="status">
+            <div id="loading" class="spinner spinner-border text-warning" aria-hidden="true" role="status">
                 <span class="visually-hidden">Cargando...</span>
             </div>
             <div id="years" style="height: 150px;">
@@ -13,7 +13,7 @@
             <div id="tags" style="height: 300px;">
             </div>
             <div id="main" style="width: 100%; height: 800px;">
-                <div class="spinner-border text-warning" role="status">
+                <div class="spinner spinner-border text-warning" aria-hidden="true" role="status">
                     <span class="visually-hidden">Cargando...</span>
                 </div>
             </div>
