--- a/docs/_layouts/data.html
+++ b/docs/_layouts/data.html
@@ -6,12 +6,12 @@
     <div class="container">
         <div class="text-center mt-5">
             <div id="years" style="height: 150px;">
-                <div id="loading" class="spinner spinner-border text-warning" aria-hidden="true" role="status">
+                <div class="spinner spinner-border text-warning" aria-hidden="true" role="status">
                     <span class="visually-hidden">Cargando...</span>
                 </div>
                 </div>
             <div id="tags" style="height: 300px;">
-                <div id="loading" class="spinner spinner-border text-warning" aria-hidden="true" role="status">
+                <div class="spinner spinner-border text-warning" aria-hidden="true" role="status">
                     <span class="visually-hidden">Cargando...</span>
                 </div>
                 </div>
