Complementar spinners con class en content div

--- a/docs/_layouts/data.html
+++ b/docs/_layouts/data.html
@@ -4,7 +4,7 @@
 <body>
     {% include header.html %}
     <div class="container">
-        <div class="text-center mt-5">
+        <div id="content" class="text-center mt-5">
             <div id="years" style="height: 150px;">
                 <div class="spinner spinner-border text-warning" aria-hidden="true" role="status">
                     <span class="visually-hidden">Cargando...</span>
