--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -6,7 +6,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                {% assign pages = site.pages | sort: 'order' %}
+                {% assign pages = site.pages | sort: 'order' | sort: 'title' %}
                 {% for item in pages %}
                     {% if item.url == page.url %}
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{ item.url | relative_url }}">{{ item.title }}</a></li>
