Arreglar typo en el liquid template de data

--- a/docs/_layouts/data.html
+++ b/docs/_layouts/data.html
@@ -60,7 +60,7 @@
     {% endraw %}
     <script>
         function loadData() {
-          fetch('${{ site.storage }}{{ page.data }}')
+          fetch('{{ site.storage }}{{ page.data }}')
             .then(response => response.json())
             .then(data => {
               window.data = data;
